--- a/Ejercicio 1/css/main.css
+++ b/Ejercicio 1/css/main.css
@@ -1,16 +1,34 @@
 body {
     font-family: 'Raleway', sans-serif;
     background-color: #F2F4F4;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    position: relative;
+    min-height: 100vh;
 }
 
 header.th {
-    background: #ffff;
+    height: 60px;
+    overflow: hidden;
+    background: #D8F4EF;
+}
+
+.dropdown-menu {
+    display: block;
+    float: left;
+    padding: 12px 0;
+    width: 6%;
+    text-align: center;
+    height: 36px;
+    cursor: pointer;
+}
+
+.logotype {
+    max-height: 60px;
 }
 
 .logotype .logo {
     display: inline-block;
+    max-height: 60px;
 }
 
 .logo img {
@@ -19,26 +37,65 @@ header.th {
     margin: 10px;
 }
 
-.menu-navegacion {
-    display: flex;
-    max-width: 100%;
-    align-items: center;
-    background-color: #212F3C;
+.menu-principal {
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    bottom: 0;
+    height: 60%;
+    overflow: auto;
+    z-index: 999;
+    width: auto;
+    margin: 0;
+    background: #2c3e50;
 }
 
-.menu-navegacion .nav {
-    display: inline-block;
-    border-block-end: 2px solid;
-    margin: 10px;
-    border-radius: 5%;
-    padding: 10px 30px;
-    color: #F2F4F4;
+.show {
+    display: block!important;
+}
+
+.menu-principal .navegacion {
+    margin: 0 auto;
+    max-width: 1220px;
+    padding: 0 20px;
+}
+
+.navegacion .items {
+    float: none;
+    position: relative;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navegacion .items li {
+    float: none;
+    margin: 0;
+    position: relative;
+}
+
+.navegacion .items a {
+    display: block;
+    color: #fff;
+    height: 42px;
+    padding: 0 10px;
+    margin: 0 0;
+    line-height: 42px;
+    font-weight: 600;
+    font-size: 1em;
+    transition: color .5s;
     text-decoration: none;
 }
 
-.menu-navegacion .nav:hover {
-    color: #212F3C;
-    background-color: #F2F4F4;
+.main-wrapper {
+    margin-top: 15px;
+    max-width: 1200px;
+    position: relative;
+    grid-gap: 20px;
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main-wrapper .title {
@@ -48,27 +105,102 @@ header.th {
 }
 
 .wrapper-content {
-    min-height: 628px;
+    grid-auto-rows: min-content;
+    grid-gap: 20px;
+    grid-template-rows: max-content;
+    display: grid;
 }
 
-.ventas-content {
+.content-box {
     background: #fff;
     border-radius: 5px;
-    margin: 10px 124px 10px;
+    margin: 10px 0px 86px;
     padding: 20px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.ventas-content .grupo {
+
+.container-info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.container-info img {
+    width: 30%;
+}
+
+.container-info .paragraph {
+    width: 40%;
+    max-width: 577px;
+    text-align: justify;
+}
+
+.content-box .grupo {
     margin-bottom: 10px;
 }
 
 .footer-wrapper {
     background: #212f3c;
-    padding-bottom: 0.1px;
-    min-height: 133px;
+    padding: 1em 0;
+    min-height: 134px;
+    position: absolute;
+    width: 100%;
 }
 .footer-wrapper .copyrigth {
     text-align: center;
-    padding: 40px;
+    padding: 14px;
     color: #F2F4F4;
+}
+
+.footer-wrapper .social-media {
+    align-content: center;
+    max-width: 310px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.social-media .icon {
+    display: inline-block;
+    margin-left: 29px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #ffffff;
+    border-radius: 60%;
+    text-align: center;
+    color: #ffffff;
+}
+
+.icon i {
+    font-size: 30px;
+    line-height: 60px;
+}
+
+@media screen and (max-width: 800px) {
+    header.th {
+        height: 60px;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 99;
+        overflow: hidden;
+    }
+    .dropdown-menu {
+        width: 12%;
+    }
+    .menu-principal {
+        right: 44%;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    .container-info img,.container-info .paragraph {
+        width: 100%;
+    }
+    .dropdown-menu {
+        width: 12%;
+    }
+    .menu-principal {
+        right: 30%;
+    }
 }
