--- a/Ejercicio 1/css/main.css
+++ b/Ejercicio 1/css/main.css
@@ -96,6 +96,7 @@ header.th {
     display: grid;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 6.6%;
 }
 
 .main-wrapper .title {
@@ -142,8 +143,8 @@ header.th {
 
 .footer-wrapper {
     background: #212f3c;
-    padding: 1em 0;
-    min-height: 134px;
+    padding: 2em 0;
+    min-height: 10%;
     position: absolute;
     width: 100%;
 }
@@ -170,6 +171,11 @@ header.th {
     text-align: center;
     color: #ffffff;
 }
+
+.social-media .icon:hover {
+    background-color: rgb(87, 168, 188);
+}
+
 
 .icon i {
     font-size: 30px;
